tests/type_tests/negatives/list_pure.py
from pfun import List


def test() -> List[int]:
    return List([''])
